# Electricity-Usage-Prediction

./: .gitignore  README.md  first_test.ipynb  pyproject.toml  requirements.txt  submission_stacked.csv  submission_weighted.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/: another_test.ipynb  enhanced_test.ipynb  first_test.ipynb  no_overfitting_test.ipynb
src/: electricity_prediction.py
submission/: 20250722_1708_UltraFast.csv  20250722_1724_Advanced_Ensemble_SMAPE_6.5819.csv  20250722_1724_XGBoost_SMAPE_6.8451.csv  20250722_1750_Advanced_Ensemble_SMAPE_5.4235.csv  20250724_1728_Advanced_Ensemble_SMAPE_4.6272.csv  20250725_0928_XGB_LGB_Simple_SMAPE_4.4490.csv  20250725_0933_XGB_LGB_Simple_SMAPE_4.4541.csv  20250725_0941_XGB_LGB_Simple_SMAPE_4.4487.csv  20250725_1009_TimeSafe_SMAPE_73.9272.csv  20250725_1015_TimeSafe_SMAPE_74.1635.csv
submissions/: feature_importance_lgbm.csv  high_correlation_pairs.csv  submission_blended.csv  submission_blended_SMAPE_13.2272.csv  submission_blended_SMAPE_14.9148.csv  submission_corrected_SMAPE_11.5283.csv  submission_corrected_SMAPE_43.7223.csv  submission_lgbm_SMAPE_17.0470.csv  submission_lgbm_SMAPE_17.8428.csv  submission_lgbm_SMAPE_18.3439.csv  submission_lgbm_SMAPE_nan.csv  submission_stacked.csv  submission_stacked_SMAPE_11.4118.csv  submission_stacked_SMAPE_11.4141.csv  submission_stacked_SMAPE_11.4631.csv  submission_stacked_SMAPE_52.9730.csv  submission_stacked_SMAPE_53.3364.csv  submission_stacked_SMAPE_55.3632.csv  submission_stacked_SMAPE_64.9328.csv  submission_weighted.csv  (+13 more)
(+1 files in other folders)
